added core.system.saveFile()
added pymel.versions.is64bit()
added new directory helpers to mayautils: getMayaAppDir(), getUserPrefsDir(), and getUserScriptsDir()
added DependNode.longName(), DependNode.shortName(), and DependNode.nodeName() for easy looping through mixed lists of DependNodes and DagNodes
added FileInfo.__delitem__ 

----------------------------------
Bugfixes
----------------------------------

unloading plugins no longer raises an error
python AE templates were not being found. fixed.
fixed a bug in api wrap, where MScriptUtil was not allocating space
fixed a bug with Transform.setMatrix()
pymel.versions.installName() is more reliable on 64-bit systems, which were sometimes detecting the installName incorrectly
Attribute('mytransform.scalePivot') now returns an the scalePivot attribute
getAttr() / Attribute.get() bugfix with multi-attr
nodetypes: fixed bug 172 where nested selection sets were raising an error when getting members
getPanel now always return panels
uitypes: all panel classes now properly inherit from Panel
fixed some keywords that had been mistakenly refactored
core.general: fixed a bug where dependNodes were not returned when duplicated


==================================
Version 1.0.0
==================================

----------------------------------
Non-Backward Compatible Changes
----------------------------------

pymel no longer has 'everything' in namespace - use pymel.all for this
pymel.core.nodetypes now moved to it's own namespace
pymel.mayahook.Version functionality moved to pymel.versions module
    - to compare versions, instead of Version class, use, for example, pymel.versions.current() >= pymel.versions.v2008
    - pymel.mayahook.mayautils.getMayaVersion()/getMayaVersion(extension=True) replaced with pymel.versions.installName()
    - pymel.mayahook.mayautils.getMayaVersion(extension=True) replaced with pymel.versions.shortName()
removed 0_7_compatibility_mode
removed deprecated methods: 